--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,26 +1,69 @@
 apply plugin: 'com.android.application'
 
+def STRING = "String"
+def BOOLEAN = "boolean"
+def INT = "int"
+
 android {
-  compileSdkVersion 23
-  buildToolsVersion "23.0.1"
+  compileSdkVersion parent.ext.androidCompileSdkVersion
+  buildToolsVersion parent.ext.androidBuildToolsVersion
 
   defaultConfig {
-    applicationId "gigigo.com.orchextraclientapp"
-    minSdkVersion 15
-    targetSdkVersion 23
-    versionCode 1
-    versionName "1.0"
+    applicationId parent.ext.androidApplicationId
+    minSdkVersion parent.ext.androidMinSdkVersion
+    targetSdkVersion parent.ext.androidTargetSdkVersion
+    versionCode parent.ext.androidVersionCode
+    versionName parent.ext.androidVersionName
+
+    // Enabling multidex support.
+    multiDexEnabled true
+
+    //    buildConfigField STRING, "ACCESS_TOKEN", '"e9ac846bcea1cd86b4f36c2c8999ba8e8d04fd28"'
+    //    buildConfigField STRING, "REFRESH_TOKEN", '"9392d04aa6c3ba39749e462ad6d60cab4d22231a"'
+    //    buildConfigField STRING, "CLIENT_TOKEN", '"undefined"'
+    //    buildConfigField STRING, "PROJECT_ID", '"5638ac99bbafcd9b3a8b4577"'
+    //
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
   }
+
   buildTypes {
+    debug {
+      testCoverageEnabled = true
+    }
     release {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
+  }
+
+  packagingOptions {
+    exclude 'META-INF/services/javax.annotation.processing.Processor'
+    exclude 'LICENSE.txt'
+  }
+}
+
+configurations.all {
+  resolutionStrategy.force 'com.android.support:support-annotations:22.1.0'
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
-  testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:23.1.1'
+  compile rootProject.ext.dependencies.androidSupportv7
+  compile rootProject.ext.dependencies.androidSupportDesign
+  debugCompile rootProject.ext.dependencies.leakcanaryDebug
+  releaseCompile rootProject.ext.dependencies.leakcanaryRelease
+
+  //compile project(':orchextrasdk')
+  compile project(':ggglogger')
+
+  testCompile rootProject.ext.testDependencies.junit
+
+  androidTestCompile  rootProject.ext.testDependencies.testRunner
+  androidTestCompile  rootProject.ext.testDependencies.testRules
+  androidTestCompile  rootProject.ext.testDependencies.espresso
+
 }
