--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,6 @@
-include ':app'
+include ':app', ':presentation', ':domain', ':repository', ':data',
+    ':orchextrasdk', ':ggglogger', ':ggglib'
+
+//project(':orchextrasdk').projectDir = new File(settingsDir, 'gigigo-orchextra-sdk-android/orchextrasdk')
+project(':ggglib').projectDir = new File(settingsDir, 'gigigo-orchextra-sdk-android/ggglib')
+project(':ggglogger').projectDir = new File(settingsDir, 'gigigo-orchextra-sdk-android/ggglogger')
