--- a/presentation/build.gradle
+++ b/presentation/build.gradle
@@ -7,9 +7,10 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 dependencies {
+    compile parent.ext.dependencies.threaddecoratedview
+    apt parent.ext.dependencies.threaddecoratedviewcompiler
+
     compile project(':domain')
-    compile 'me.panavtec:threaddecoratedview-common:1.5.1'
-    apt 'me.panavtec:threaddecoratedview-compiler:1.5.1'
 
     testCompile rootProject.ext.testDependencies.junit
     testCompile rootProject.ext.testDependencies.mockito
