submodule updated and setting gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,7 +57,7 @@ dependencies {
   debugCompile rootProject.ext.dependencies.leakcanaryDebug
   releaseCompile rootProject.ext.dependencies.leakcanaryRelease
 
-  //compile project(':orchextrasdk')
+  compile project(':orchextrasdk')
   //compile project(':ggglogger')
 
   testCompile rootProject.ext.testDependencies.junit
