--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
+apply from: './gigigo-orchextra-sdk-android/settings.gradle'
+
 include ':app', ':presentation', ':domain', ':repository', ':data',
     ':orchextrasdk',
-    ':ggglogger', ':ggglib'
+    ':ggglib', ':ggglogger'
 
-project(':orchextrasdk').projectDir = new File(settingsDir, 'gigigo-orchextra-sdk-android/orchextrasdk')
-//project(':ggglib').projectDir = new File(settingsDir, 'gigigo-orchextra-sdk-android/ggglib')
-//project(':ggglogger').projectDir = new File(settingsDir, 'gigigo-orchextra-sdk-android/ggglogger')
+project(':orchextrasdk').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk')
