dependencies and settings gradle finally ok

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,7 +58,7 @@ dependencies {
   releaseCompile rootProject.ext.dependencies.leakcanaryRelease
 
   compile project(':orchextrasdk')
-  //compile project(':ggglogger')
+  compile project(':ggglogger')
 
   testCompile rootProject.ext.testDependencies.junit
 
