--- a/settings.gradle
+++ b/settings.gradle
@@ -5,5 +5,10 @@ include ':app', ':presentation', ':domain', ':repository', ':data',
     ':ggglib', ':ggglogger'
 
 project(':orchextrasdk').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk')
+project(':orchextrasdk-control').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk-control')
+project(':orchextrasdk-domain').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk-domain')
+project(':orchextrasdk-dataprovision').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk-dataprovision')
+project(':orchextrasdk-data').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk-data')
+
 project(':ggglib').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/gigigo-gigigoutilssuite-android/ggglib')
 project(':ggglogger').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/gigigo-gigigoutilssuite-android/ggglogger')
