--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ apply from: './gigigo-orchextra-sdk-android/settings.gradle'
 
 include ':app', ':presentation', ':domain', ':repository', ':data',
     ':orchextrasdk',
-    ':ggglib', ':ggglogger'
+    ':ggg-java-lib', ':ggglib', ':ggglogger'
 
 project(':orchextrasdk').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk')
 project(':orchextrasdk-control').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk-control')
@@ -10,5 +10,6 @@ project(':orchextrasdk-domain').projectDir = new File(settingsDir, './gigigo-orc
 project(':orchextrasdk-dataprovision').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk-dataprovision')
 project(':orchextrasdk-data').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/orchextrasdk-data')
 
+project(':ggg-java-lib').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/gigigo-gigigoutilssuite-android/ggg-java-lib')
 project(':ggglib').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/gigigo-gigigoutilssuite-android/ggglib')
 project(':ggglogger').projectDir = new File(settingsDir, './gigigo-orchextra-sdk-android/gigigo-gigigoutilssuite-android/ggglogger')
