--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gigigo-orchextra-sdk-android"]
-	path = gigigo-orchextra-sdk-android
+[submodule "orchextra-sdk"]
+	path = orchextra-sdk
 	url = git@bitbucket.org:gigigo/gigigo-orchextra-sdk-android.git
