--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "orchextra-sdk"]
+[submodule "gigigo-orchextra-sdk-android"]
 	path = orchextra-sdk
 	url = git@bitbucket.org:gigigo/gigigo-orchextra-sdk-android.git
