--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -8,13 +8,14 @@ allprojects {
                     daggerCompiler             : 'com.google.dagger:dagger-compiler:2.0',
                     dagger                     : 'com.google.dagger:dagger:2.0',
                     javaXannotations           : 'org.glassfish:javax.annotation:10.0-b28',
-                    supportAnnotations         : 'com.android.support:support-annotations:23.0.0',
+                    supportAnnotations         : 'com.android.support:support-annotations:23.1.1',
                     leakcanaryDebug            : 'com.squareup.leakcanary:leakcanary-android:1.3.1',
                     leakcanaryRelease          : 'com.squareup.leakcanary:leakcanary-android-no-op:1.3.1',
                     coordinator                : 'me.panavtec:coordinator:1.1.5',
                     coordinatorCompiler        : 'me.panavtec:coordinator-compiler:1.1.5',
                     threaddecoratedview        : 'me.panavtec:threaddecoratedview-common:1.5.1',
                     threaddecoratedviewcompiler: 'me.panavtec:threaddecoratedview-compiler:1.5.1',
+                    dexter                     : 'com.karumi:dexter:2.1.2',
                     javaxInjectAnnotations: 'javax.inject:javax.inject:1']
 
     testDependencies = [mockito      : 'org.mockito:mockito-all:2.0.2-beta',
