--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -18,11 +18,12 @@ allprojects {
                     dexter                     : 'com.karumi:dexter:2.1.2',
                     javaxInjectAnnotations: 'javax.inject:javax.inject:1']
 
-    testDependencies = [mockito      : 'org.mockito:mockito-all:2.0.2-beta',
+    testDependencies = [mockito      : 'org.mockito:mockito-core:2.0.31-beta',
                         junit        : 'junit:junit:4.12',
                         testRunner   : 'com.android.support.test:runner:0.4.1',
                         testRules    : 'com.android.support.test:rules:0.4.1',
                         espresso     : 'com.android.support.test.espresso:espresso-core:2.2.1',
-                        mockWebServer: 'com.squareup.okhttp:mockwebserver:2.6.0']
+                        mockWebServer: 'com.squareup.okhttp:mockwebserver:2.6.0'
+                        ]
   }
 }
