--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -16,7 +16,9 @@ allprojects {
                     threaddecoratedview        : 'me.panavtec:threaddecoratedview-common:1.5.1',
                     threaddecoratedviewcompiler: 'me.panavtec:threaddecoratedview-compiler:1.5.1',
                     dexter                     : 'com.karumi:dexter:2.1.2',
-                    javaxInjectAnnotations: 'javax.inject:javax.inject:1']
+                    javaxInjectAnnotations     : 'javax.inject:javax.inject:1',
+                    playServicesGcm               : 'com.google.android.gms:play-services-gcm:8.3.0'
+    ]
 
     testDependencies = [mockito      : 'org.mockito:mockito-core:2.0.31-beta',
                         junit        : 'junit:junit:4.12',
