--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,7 +17,8 @@ allprojects {
                     threaddecoratedviewcompiler: 'me.panavtec:threaddecoratedview-compiler:1.5.1',
                     dexter                     : 'com.karumi:dexter:2.1.2',
                     javaxInjectAnnotations     : 'javax.inject:javax.inject:1',
-                    playServicesGcm               : 'com.google.android.gms:play-services-gcm:8.3.0'
+                    playServicesGcm            : 'com.google.android.gms:play-services-gcm:8.3.0',
+                    realm                      : 'io.realm:realm-android:0.87.0'
     ]
 
     testDependencies = [mockito      : 'org.mockito:mockito-core:2.0.31-beta',
