--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -19,8 +19,7 @@ allprojects {
                     javaxInjectAnnotations     : 'javax.inject:javax.inject:1',
                     playServicesGcm            : 'com.google.android.gms:play-services-gcm:8.4.0',
                     playServicesLocation       : 'com.google.android.gms:play-services-location:8.4.0',
-                    realm                      : 'io.realm:realm-android:0.87.0',
-                    butterKnife                : 'com.jakewharton:butterknife:7.0.1'
+                    realm                      : 'io.realm:realm-android:0.87.0'
     ]
 
     testDependencies = [mockito      : 'org.mockito:mockito-core:2.0.31-beta',
