--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,10 @@ android {
   }
 
   buildTypes {
+    demo1 {
+      signingConfig android.signingConfigs.debug
+      testCoverageEnabled = true
+    }
     debug {
       testCoverageEnabled = true
     }
@@ -33,6 +37,11 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+    lintOptions {
+      abortOnError false
+    }
+
 
   compileOptions {
     sourceCompatibility JavaVersion.VERSION_1_7
