--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         android:name=".MainActivity"
         android:label="@string/title_activity_main"
         android:theme="@style/AppTheme.NoActionBar"
+        android:screenOrientation="portrait"
         >
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
