--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,10 @@ configurations.all {
 dependencies {
   compile rootProject.ext.dependencies.androidSupportv7
   compile rootProject.ext.dependencies.androidSupportDesign
+  compile rootProject.ext.dependencies.butterKnife
+  compile 'com.github.bumptech.glide:glide:3.7.0'
+  compile 'com.github.cmc00022:easyrecycleradapters:1.1.1'
+
   debugCompile rootProject.ext.dependencies.leakcanaryDebug
   releaseCompile rootProject.ext.dependencies.leakcanaryRelease
 
