--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
       android:theme="@style/AppTheme"
       >
     <activity
-        android:name=".ImageListActivity"
+        android:name=".MainActivity"
         android:label="@string/title_activity_main"
         android:theme="@style/AppTheme.NoActionBar"
         android:screenOrientation="portrait"
