update launcher icon

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,14 @@
   <application
       android:name=".App"
       android:allowBackup="true"
-      android:icon="@mipmap/ic_launcher"
+      android:icon="@drawable/launcher"
       android:label="@string/app_name"
       android:supportsRtl="true"
       android:theme="@style/AppTheme"
       >
     <activity
         android:name=".MainActivity"
-        android:label="@string/title_activity_main"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme.NoActionBar"
         android:screenOrientation="portrait"
         >
