--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,11 +23,6 @@ dependencies {
   compile fileTree(dir: 'libs', include: ['*.jar'])
   testCompile 'junit:junit:4.12'
   compile 'com.android.support:appcompat-v7:23.1.1'
-  compile 'com.google.android.gms:play-services:8.1.0'
-  compile 'me.dm7.barcodescanner:zbar:1.8.3'
-  compile 'com.android.support:design:23.1.1'
-  compile 'com.squareup.okhttp:okhttp:2.5.0'
 
-  compile project (':orchextraSDK')
-
+  compile 'com.github.Orchextra.orchextra-android-sdk:orchextrasdk:2.0.2'
 }
