--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -39,7 +39,8 @@ allprojects {
                     playServicesLocation       : 'com.google.android.gms:play-services-location:8.4.0',
                     realm                      : 'io.realm:realm-android:0.87.0',
                     butterKnife                : 'com.jakewharton:butterknife:7.0.1',
-                    altBeacon                  : 'org.altbeacon:android-beacon-library:2+'
+                    altBeacon                  : 'org.altbeacon:android-beacon-library:2+',
+                    barcodescanner             : 'me.dm7.barcodescanner:zbar:1.8.3'
 
     ]
 
