--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,9 +20,9 @@ allprojects {
   ext {
     dependencies = [androidSupportv7           : 'com.android.support:appcompat-v7:23.1.1',
                     androidSupportDesign       : 'com.android.support:design:23.1.0',
-                    retrofit                   : 'com.squareup.retrofit:retrofit:2.0.0-beta2',
-                    gsonConverter              : 'com.squareup.retrofit:converter-gson:2.0.0-beta2',
-                    loggingInterceptor         : 'com.squareup.okhttp:logging-interceptor:2.6.0',
+                    retrofit                   : 'com.squareup.retrofit2:retrofit:2.0.0',
+                    gsonConverter              : 'com.squareup.retrofit2:converter-gson:2.0.0',
+                    loggingInterceptor         : 'com.squareup.okhttp3:logging-interceptor:3.2.0',
                     daggerCompiler             : 'com.google.dagger:dagger-compiler:2.0',
                     dagger                     : 'com.google.dagger:dagger:2.0',
                     javaXannotations           : 'org.glassfish:javax.annotation:10.0-b28',
