--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ allprojects {
   }
 }
 
+ext {
+    travisBuild = System.getenv("TRAVIS") == "true"
+    // allows for -Dpre-dex=false to be set
+    preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+}
+
 task clean(type: Delete) {
   delete rootProject.buildDir
 }
