--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
   defaultConfig {
     applicationId "com.gigigo.orchextra.orchextrasampleappandroid"
-    minSdkVersion 18
+    minSdkVersion 10
     targetSdkVersion 23
     versionCode 1
     versionName "1.0"
@@ -29,9 +29,7 @@ android {
 }
 
 dependencies {
-  compile fileTree(dir: 'libs', include: ['*.jar'])
+  compile 'com.github.Orchextra.orchextra-android-sdk:orchextrasdk:2.3.0'
+  compile 'com.github.GigigoGreenLabs.imgRecognition:vuforiaimplementation:1.0'
   testCompile 'junit:junit:4.12'
-  compile 'com.android.support:appcompat-v7:23.1.1'
-
-  compile 'com.github.Orchextra.orchextra-android-sdk:orchextrasdk:2.0.2'
 }
