--- a/build.gradle
+++ b/build.gradle
@@ -5,24 +5,51 @@ buildscript {
     jcenter()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:1.5.0'
-
+    classpath 'com.android.tools.build:gradle:2.1.0'
     // NOTE: Do not place your application dependencies here; they belong
     // in the individual module build.gradle files
   }
 }
 
 allprojects {
+
+  ext {
+
+    travisBuild = System.getenv("TRAVIS") == "true"
+    // allows for -Dpre-dex=false to be set
+    preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+
+    // Android config
+    androidBuildToolsVersion = '23.0.1'
+    androidMinSdkVersion = 10
+    androidTargetSdkVersion = 23
+    androidCompileSdkVersion = 23
+    androidApplicationId = 'com.gigigo.orchextra.sdk'
+
+    versionMajor = 2
+    versionMinor = 3
+    versionPatch = 0
+
+    androidVersionCode = versionMajor * 1000 + versionMinor * 100 + versionPatch
+    androidVersionName = versionMajor + "." + versionMinor + "." + versionPatch
+  }
+
   repositories {
     jcenter()
+    mavenCentral()
     maven { url "https://jitpack.io" }
   }
+
 }
 
 ext {
     travisBuild = System.getenv("TRAVIS") == "true"
     // allows for -Dpre-dex=false to be set
     preDexEnabled = "true".equals(System.getProperty("pre-dex", "true"))
+}
+
+task wrapper(type: Wrapper) {
+  gradleVersion = '2.12'
 }
 
 task clean(type: Delete) {
